--- a/manifest.json
+++ b/manifest.json
@@ -8,44 +8,10 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "src/assets/icons/icon-72x72.png",
-      "type": "image/png",
-      "sizes": "72x72"
-    },
-    {
-      "src": "src/assets/icons/icon-96x96.png",
-      "type": "image/png",
-      "sizes": "96x96"
-    },
-    {
-      "src": "src/assets/icons/icon-128x128.png",
-      "type": "image/png",
-      "sizes": "128x128"
-    },
-    {
-      "src": "src/assets/icons/icon-144x144.png",
-      "type": "image/png",
-      "sizes": "144x144"
-    },
-    {
-      "src": "src/assets/icons/icon-152x152.png",
-      "type": "image/png",
-      "sizes": "152x152"
-    },
-    {
-      "src": "src/assets/icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "src/assets/icons/icon-384x384.png",
-      "type": "image/png",
-      "sizes": "384x384"
-    },
-    {
-      "src": "src/assets/icons/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+    "src": "src/assets/icons/logo.svg",
+    "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
+    "type": "image/svg+xml",
+    "purpose": "any"
+}
   ]
 }
