--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "short_name": "القراءات العشر",
   "start_url": "index.html",
   "background_color": "#fdfdfd",
-  "theme_color": "#6c6c6c",
+  "theme_color": "#000000",
   "orientation": "portrait-primary",
   "scope": "/",
   "icons": [
