--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "start_url": "index.html",
   "background_color": "#fdfdfd",
   "theme_color": "#000000",
-  "orientation": "portrait-primary",
+  "orientation": "any",
   "scope": "/",
   "icons": [
     {
